--- a/main.html
+++ b/main.html
@@ -9,6 +9,55 @@
 </head>
 <body>
     <!-- add table here -->
+	<table border = "1">
+		<thead style="background-color: dodgerblue" 
+			>
+				<tr>
+					<td>Name</td>
+					<td>Kills</td>
+					<td>Saved</td>
+					<td>Deaths</td>
+					<td>Revives</td>
+					<td>Win</td>
+				</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>Hackerman</td>
+				<td>10</td>
+				<td>5</td>
+				<td>6</td>
+				<td>8</td>
+				<td>7</td>
+			
+			<tr>
+				<td>Hackerman</td>
+				<td>10</td>
+				<td>5</td>
+				<td>6</td>
+				<td>8</td>
+				<td>7</td>
+			</tr>
+		
+			<tr>
+				<td>Hackerman</td>
+				<td>10</td>
+				<td>5</td>
+				<td>6</td>
+				<td>8</td>
+				<td>7</td>
+			</tr>
+	
+			<tr>
+				<td>Hackerman</td>
+				<td>10</td>
+				<td>5</td>
+				<td>6</td>
+				<td>8</td>
+				<td>7</td>
+			</tr>
+		</tbody>
+	</table>
 
         
 </body>
