--- a/main.html
+++ b/main.html
@@ -10,15 +10,14 @@
 <body>
     <!-- add table here -->
 	<table border = "1">
-		<thead style="background-color: dodgerblue" 
-			>
+		<thead style="background-color: dodgerblue">
 				<tr>
-					<td>Name</td>
-					<td>Kills</td>
-					<td>Saved</td>
-					<td>Deaths</td>
-					<td>Revives</td>
-					<td>Win</td>
+					<th>Name</th>
+					<th>Kills</th>
+					<th>Saved</th>
+					<th>Deaths</th>
+					<th>Revives</th>
+					<th>Win</th>
 				</tr>
 		</thead>
 		<tbody>
